--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="explore_admin">
+  <meta name="apple-mobile-web-app-title" content="testweb">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>explore_admin</title>
+  <title>testweb</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
